[gd_scene load_steps=14 format=2]

[ext_resource path="res://source/login and menus/ReadyScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/login and menus/FindMatch.gd" type="Script" id=2]
[ext_resource path="res://source/GameManager.gd" type="Script" id=3]
[ext_resource path="res://source/Main.gd" type="Script" id=5]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/sounds/music/celestejazz.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/ohter things/tileset.tres" type="TileSet" id=9]
[ext_resource path="res://assets/sounds/effects/ui/click.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/effects/ui/back.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/ohter things/buttonfonttheme.tres" type="Theme" id=14]
[ext_resource path="res://assets/sounds/effects/ui/connected.wav" type="AudioStream" id=15]
[ext_resource path="res://assets/sounds/music/p5jazz.ogg" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/music/zeldajazz.ogg" type="AudioStream" id=17]

[node name="Main" type="Node2D" groups=[
"GameWorld",
]]
script = ExtResource( 5 )

[node name="environment" type="Node2D" parent="."]

[node name="collisions" type="TileMap" parent="environment"]
position = Vector2( 2048, 0 )
tile_set = ExtResource( 9 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -3080116, -1610612735, 0, -3080115, -1610612735, 0, -3014581, -1610612735, 0, -3014580, -1610612735, 0, -3014579, -1073741823, 0, -3014578, -1610612735, 0, -2949046, -1610612735, 0, -2949045, -1610612735, 0, -2949044, 1610612738, 0, -2949042, -1073741822, 0, -2949041, -1610612735, 0, -2883511, -1610612735, 0, -2883510, -1610612735, 0, -2883509, 1610612738, 0, -2883505, -1073741822, 0, -2883504, -1610612735, 0, -2817976, -1610612735, 0, -2817975, -1610612735, 0, -2817974, 1610612738, 0, -2817968, -1073741822, 0, -2817967, -1610612735, 0, -2752441, -1610612735, 0, -2752440, -1610612735, 0, -2752439, 1610612738, 0, -2752431, -1073741822, 0, -2752430, -1610612735, 0, -2686906, -1610612735, 0, -2686905, -1610612735, 0, -2686904, 1610612738, 0, -2686894, -1073741822, 0, -2686893, -1610612735, 0, -2621371, -1610612735, 0, -2621370, -1610612735, 0, -2621369, 1610612738, 0, -2621357, -1073741822, 0, -2621356, -1610612735, 0, -2555836, -1610612735, 0, -2555835, -1610612735, 0, -2555834, 1610612738, 0, -2555820, -1073741822, 0, -2555819, -1610612735, 0, -2490301, -1610612735, 0, -2490300, -1610612735, 0, -2490299, 1610612738, 0, -2490283, -1073741822, 0, -2490282, -1610612735, 0, -2424766, -1610612735, 0, -2424765, -1610612735, 0, -2424764, 1610612738, 0, -2424746, -1073741822, 0, -2424745, -1610612735, 0, -2359231, -1610612735, 0, -2359230, -1610612735, 0, -2359229, 1610612738, 0, -2359209, -1073741822, 0, -2359208, -1610612735, 0, -2293696, -1610612735, 0, -2293695, -1610612735, 0, -2293694, 1610612738, 0, -2293672, -1073741822, 0, -2293671, -1610612735, 0, -2228161, -1610612735, 0, -2228160, -1610612735, 0, -2228159, 1610612738, 0, -2228135, -1073741822, 0, -2228134, -1610612735, 0, -2162626, -1610612735, 0, -2162625, -1610612735, 0, -2162624, 1610612738, 0, -2162598, -1073741822, 0, -2162597, -1610612735, 0, -2097091, -1610612735, 0, -2097090, -1610612735, 0, -2097089, 1610612738, 0, -2097061, -1073741822, 0, -2097060, -1610612735, 0, -2031556, -1610612735, 0, -2031555, -1610612735, 0, -2031554, 1610612738, 0, -2031524, -1073741822, 0, -2031523, -1610612735, 0, -1966021, -1610612735, 0, -1966020, -1610612735, 0, -1966019, 1610612738, 0, -1965987, -1073741822, 0, -1965986, -1610612735, 0, -1900486, -1610612735, 0, -1900485, -1610612735, 0, -1900484, 1610612738, 0, -1900450, -1073741822, 0, -1900449, -1610612735, 0, -1834951, -1610612735, 0, -1834950, -1610612735, 0, -1834949, 1610612738, 0, -1834913, -1073741822, 0, -1834912, -1610612735, 0, -1769416, -1610612735, 0, -1769415, -1610612735, 0, -1769414, 1610612738, 0, -1769376, -1073741822, 0, -1769375, -1610612735, 0, -1703881, -1610612735, 0, -1703880, -1610612735, 0, -1703879, 1610612738, 0, -1703839, 1, 0, -1703838, -1610612735, 0, -1638346, -1610612735, 0, -1638345, -1610612735, 0, -1638344, 1610612738, 0, -1638304, 2, 0, -1638303, -1610612735, 0, -1572811, -1610612735, 0, -1572810, -1610612735, 0, -1572809, 1610612738, 0, -1572769, 2, 0, -1572768, -1610612735, 0, -1507276, -1610612735, 0, -1507275, -1610612735, 0, -1507274, 1610612738, 0, -1507234, 2, 0, -1507233, -1610612735, 0, -1441741, -1610612735, 0, -1441740, -1610612735, 0, -1441739, 1610612738, 0, -1441699, 2, 0, -1441698, -1610612735, 0, -1376206, -1610612735, 0, -1376205, -1610612735, 0, -1376204, 1610612738, 0, -1376164, 2, 0, -1376163, -1610612735, 0, -1310671, -1610612735, 0, -1310670, -1610612735, 0, -1310669, 1610612738, 0, -1310629, 2, 0, -1310628, -1610612735, 0, -1245136, -1610612735, 0, -1245135, -1610612735, 0, -1245134, 1610612738, 0, -1245094, 2, 0, -1245093, -1610612735, 0, -1179601, -1610612735, 0, -1179600, -1610612735, 0, -1179599, 1610612738, 0, -1179559, 2, 0, -1179558, -1610612735, 0, -1114066, -1610612735, 0, -1114065, -1610612735, 0, -1114064, 1610612738, 0, -1114024, 2, 0, -1114023, -1610612735, 0, -1048531, -1610612735, 0, -1048530, -1610612735, 0, -1048529, 1610612738, 0, -1048489, 2, 0, -1048488, -1610612735, 0, -982996, -1610612735, 0, -982995, -1610612735, 0, -982994, 1610612738, 0, -982954, 2, 0, -982953, -1610612735, 0, -917461, -1610612735, 0, -917460, -1610612735, 0, -917459, 1610612738, 0, -917419, 2, 0, -917418, -1610612735, 0, -851926, -1610612735, 0, -851925, -1610612735, 0, -851924, 1610612738, 0, -851884, 2, 0, -851883, -1610612735, 0, -786391, -1610612735, 0, -786390, -1610612735, 0, -786389, 1610612738, 0, -786349, 2, 0, -786348, -1610612735, 0, -720856, -1610612735, 0, -720855, -1610612735, 0, -720854, 1610612738, 0, -720814, 2, 0, -720813, -1610612735, 0, -655321, -1610612735, 0, -655320, -1610612735, 0, -655319, 1610612738, 0, -655279, 2, 0, -655278, -1610612735, 0, -589786, -1610612735, 0, -589785, -1610612735, 0, -589784, 1610612738, 0, -589744, 2, 0, -589743, -1610612735, 0, -524251, -1610612735, 0, -524250, -1610612735, 0, -524249, 1610612738, 0, -524209, 2, 0, -524208, -1610612735, 0, -458716, -1610612735, 0, -458715, -1610612735, 0, -458714, 1610612738, 0, -458674, 2, 0, -458673, -1610612735, 0, -393181, -1610612735, 0, -393180, -1610612735, 0, -393179, 1610612738, 0, -393139, 2, 0, -393138, -1610612735, 0, -327646, -1610612735, 0, -327645, -1610612735, 0, -327644, 1610612738, 0, -327604, 2, 0, -327603, -1610612735, 0, -262111, -1610612735, 0, -262110, -1610612735, 0, -262109, 1610612738, 0, -262069, 2, 0, -262068, -1610612735, 0, -196576, -1610612735, 0, -196575, -1610612735, 0, -196574, 1610612738, 0, -196534, 2, 0, -196533, -1610612735, 0, -131041, -1610612735, 0, -131040, -1610612735, 0, -131039, 1610612738, 0, -130999, 2, 0, -130998, -1610612735, 0, -65506, -1610612735, 0, -65505, -1610612735, 0, -65504, 1610612738, 0, -65464, 2, 0, -65463, -1610612735, 0, 31, -1610612735, 0, 32, -1610612734, 0, 71, 2, 0, 72, -1610612735, 0, 65568, -1610612735, 0, 65569, -1610612734, 0, 65606, 2, 0, 65607, -1610612735, 0, 131105, -1610612735, 0, 131106, -1610612734, 0, 131141, 2, 0, 131142, -1610612735, 0, 196642, -1610612735, 0, 196643, -1610612734, 0, 196676, 2, 0, 196677, -1610612735, 0, 262179, -1610612735, 0, 262180, -1610612734, 0, 262211, 2, 0, 262212, -1610612735, 0, 327716, -1610612735, 0, 327717, -1610612734, 0, 327746, 2, 0, 327747, -1610612735, 0, 393253, -1610612735, 0, 393254, -1610612734, 0, 393281, 2, 0, 393282, -1610612735, 0, 458790, -1610612735, 0, 458791, -1610612734, 0, 458816, 2, 0, 458817, -1610612735, 0, 524327, -1610612735, 0, 524328, -1610612734, 0, 524351, 2, 0, 524352, -1610612735, 0, 589864, -1610612735, 0, 589865, -1610612734, 0, 589886, 2, 0, 589887, -1610612735, 0, 655401, -1610612735, 0, 655402, -1610612734, 0, 655421, 2, 0, 655422, -1610612735, 0, 720938, -1610612735, 0, 720939, -1610612734, 0, 720956, 2, 0, 720957, -1610612735, 0, 786475, -1610612735, 0, 786476, -1610612734, 0, 786491, 2, 0, 786492, -1610612735, 0, 852012, -1610612735, 0, 852013, -1610612734, 0, 852026, 2, 0, 852027, -1610612735, 0, 917549, -1610612735, 0, 917550, -1610612734, 0, 917561, 2, 0, 917562, -1610612735, 0, 983086, -1610612735, 0, 983087, -1610612734, 0, 983096, 2, 0, 983097, -1610612735, 0, 1048623, -1610612735, 0, 1048624, -1610612734, 0, 1048631, 2, 0, 1048632, -1610612735, 0, 1114160, -1610612735, 0, 1114161, -1610612734, 0, 1114166, 2, 0, 1114167, -1610612735, 0, 1179697, -1610612735, 0, 1179698, -1610612734, 0, 1179701, 2, 0, 1179702, -1610612735, 0, 1245234, -1610612735, 0, 1245235, -1610612734, 0, 1245236, 2, 0, 1245237, -1610612735, 0, 1310771, -1610612735, 0, 1310772, -1610612735, 0 )

[node name="map size2" type="ReferenceRect" parent="."]
margin_left = 4520.0
margin_top = -1448.0
margin_right = 5416.0
margin_bottom = 600.0
rect_rotation = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 192.0
margin_top = 64.0
margin_right = 832.0
margin_bottom = 512.0
theme = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyScreen" parent="Control" instance=ExtResource( 1 )]

[node name="FindMatch" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Control/FindMatch"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/FindMatch"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0356
margin_top = -13.6071
margin_right = 47.9644
margin_bottom = 0.392883
text = "Finding Match..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FindMatch" type="Button" parent="Control/FindMatch"]
margin_left = 232.0
margin_top = 192.0
margin_right = 414.0
margin_bottom = 250.0
text = "Find Match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2v2" type="CheckBox" parent="Control/FindMatch"]
margin_left = 336.0
margin_top = 120.0
margin_right = 367.0
margin_bottom = 157.0

[node name="2v2label" type="Label" parent="Control/FindMatch"]
margin_left = 200.0
margin_top = 104.0
margin_right = 344.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 7 )
text = "Search for 2v2?
Searches for 1v1
by default."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerSpawnPoints" type="Node2D" parent="Players"]

[node name="Player1" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 3328, 0 )

[node name="Player2" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 4544, -1216 )

[node name="Player3" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 3712, 384 )

[node name="Player4" type="Position2D" parent="Players/PlayerSpawnPoints"]
position = Vector2( 4928, -832 )

[node name="PlayersSpawnUnder" type="Node2D" parent="Players"]

[node name="Camera2D" type="Camera2D" parent="Players"]
position = Vector2( 511.979, 287.704 )
current = true

[node name="ui" type="ReferenceRect" parent="Players/Camera2D"]
margin_left = -511.979
margin_top = -287.704
margin_right = 512.021
margin_bottom = 288.296
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="Players/Camera2D/ui"]
margin_left = 16.0
margin_top = 8.0
margin_right = 832.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentsong" type="Label" parent="Players/Camera2D/ui"]
margin_left = 192.0
margin_top = 32.0
margin_right = 1008.0
margin_bottom = 59.0
theme = ExtResource( 14 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="Node2D" parent="."]

[node name="login1" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 8 )

[node name="login2" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 16 )

[node name="login3" type="AudioStreamPlayer" parent="sound"]
stream = ExtResource( 17 )

[node name="uisound" type="Node2D" parent="sound"]

[node name="click" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 10 )

[node name="back" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 11 )

[node name="connected" type="AudioStreamPlayer" parent="sound/uisound"]
stream = ExtResource( 15 )

[connection signal="button_down" from="Control/FindMatch/FindMatch" to="Control/FindMatch" method="_on_Button_button_down"]
[connection signal="toggled" from="Control/FindMatch/2v2" to="Control/FindMatch" method="_on_2v2_toggled"]
